# streamlit

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/t2_streamlit/: app.py
src/t2_streamlit/pages/: admin.py  all.py  camera.py  chart.py  delete.py  label.py  upload.py  upload_pic.py
src/t2_streamlit/pages/tmp/: age.py  chart.backup.py  label.py  test.py
