[project]
name = "t2-streamlit"
version = "0.1.0"
description = "Streamlit app for AI control system"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
