[project]
name = "t2-streamlit"
version = "0.6.2"
description = "Streamlit app for AI control system"
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
]
dependencies = [
    "streamlit>=1.39.0",
    "mtcnn>=0.1.1",
    "requests>=2.32.3",
    "setuptools>=75.1.0",
    "tensorflow>=2.17.0",
    "opencv-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
